fixed overflow problem, plus minor refactor of CSS

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
