--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -1,5 +1,5 @@
 @media (max-width: 500px) {
-	.details {
-		max-width: 80%;
-	}
+  .details {
+    max-width: 90%;
+  }
 }
